Add account search handler

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
     container_name: simbirsoft.tests
     image: mrexpen/planet_olymp_phase1
     pull_policy: always
+    restart: always
     ports:
     - "8090:8080"
     depends_on:
@@ -52,7 +53,7 @@ services:
     - simbirsoft.api.network
     environment:
       SERVER_URL: http://api:8080
-      STAGE: 1
+      STAGE: all
       # 0, 1 или 2 - запуск тестов для соответствующего этапа
       # all - запуск всех тестов из трёх доступных этапов
 
