--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       interval: 10s
       timeout: 60s
       retries: 5
-      start_period: 10s
+      start_period: 5s
 
   tests:
     container_name: simbirsoft.tests
@@ -58,7 +58,7 @@ services:
     - simbirsoft.api.network
     environment:
       SERVER_URL: http://api:8080
-      STAGE: all
+      STAGE: 1
       # 0, 1 или 2 - запуск тестов для соответствующего этапа
       # all - запуск всех тестов из трёх доступных этапов
 
